# xdrgen

./: .gitignore  .travis.yml  Gemfile  Guardfile  LICENSE.txt  Makefile  README.md  Rakefile  build_install.bat  xdrgen-0.0.2.gem  xdrgen.gemspec
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ruby.yml
lib/: xdrgen.rb
lib/xdrgen/: ast.rb  cli.rb  compilation.rb  generator.rb  generators.rb  grammar.treetop  output.rb  output_file.rb  parser.rb  preprocessor.rb  version.rb
lib/xdrgen/ast/: array_decl.rb  const_def.rb  constant.rb  decimal_constant.rb  declaration.rb  definition.rb  enum_def.rb  fixed_size.rb  hexadecimal_constant.rb  identifier.rb  namespace_def.rb  octal_constant.rb  opaque_decl.rb  optional_decl.rb  simple_decl.rb  string_decl.rb  struct_def.rb  top.rb  typedef_def.rb  union_def.rb  var_array_decl.rb  var_opaque_decl.rb  var_size.rb  void_decl.rb  whitespace.rb
lib/xdrgen/generators/: base.rb  csharp.rb  dotnet.rb  elixir.rb  go.rb  java.rb  javascript.rb  python.rb  ruby.rb  rust.rb  scala.rb  typescript.rb
lib/xdrgen/generators/rust/: Cargo.toml
lib/xdrgen/generators/rust/src/: lib.rs  types.rs
lib/xdrgen/grammar/: base.treetop  base_nodes.rb  comments.treetop  comments_nodes.rb  const.treetop  const_nodes.rb  declaration.treetop  enum.treetop  enum_nodes.rb  main.treetop  main_nodes.rb  namespace.treetop  namespace_nodes.rb  nodes.rb  struct.treetop  struct_nodes.rb  typedef.treetop  typedef_nodes.rb  union.treetop  (+1 more)
spec/: spec_helper.rb
spec/fixtures/: enum.x  test.x
spec/support/: fixtures.rb
(+365 files in other folders)
