[package]
name = "rs-xdr-types"
version = "0.0.0"
edition = "2021"

[dependencies]
base64 = { version = "0.13.0", optional = true }
arbitrary = { version = "1.1.3", features = ["derive"] }
hex = { version = "0.4.3", optional = true }

[features]
default = ["std"]
std = ["alloc", "base64/std"]
alloc = ["dep:hex"]
base64 = ["std", "dep:base64"]
